# lighting_models

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  src_head.sh
include/: camera.hpp  clock.hpp  gui.hpp  primitives.hpp  renderer.hpp  scene.hpp  shader.hpp  window.hpp
src/: camera.cpp  clock.cpp  glad.c  gui.cpp  main.cpp  renderer.cpp  scene.cpp  shader.cpp  window.cpp
src/shaders/: fragment_lambert.glsl  fragment_phong.glsl  fragment_shader.glsl  vertex_lambert.glsl  vertex_phong.glsl  vertex_shader.glsl
